--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+  
+  * {
+      box-sizing: border-box;
+  }
+body{
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+a{
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.hr{
+    width: 82%;
+    margin: 0px auto 5px;
+    top: -15px;
+    position: relative;
+}
